@@ -12,6 +12,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Setup
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
     - name: Pre-commit
       uses: pre-commit/action@v2.0.0
